force-app/main/default/objects/ServiceCrewMember/fields/CrewMemberUserID__c.field-meta.xml
<CustomField>
    <fullName>CrewMemberUserID__c</fullName>
    <formula>ServiceResource.RelatedRecordId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CrewMemberUserID</label>
    <type>Text</type>
</CustomField>