force-app/main/default/objects/ServiceCrewMember/fields/FSM_Active__c.field-meta.xml
<CustomField>
    <fullName>FSM_Active__c</fullName>
    <description>created as part of SFS-6540</description>
    <formula>AND(StartDate &lt;= Now(),OR( ISNULL( EndDate ) , ISBLANK(EndDate),(EndDate) &gt; Now()))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>