force-app/main/default/objects/ServiceCrewMember/fields/FSM_ServiceCrewName__c.field-meta.xml
<CustomField>
    <fullName>FSM_ServiceCrewName__c</fullName>
    <formula>ServiceResource.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Crew Name</label>
    <type>Text</type>
</CustomField>